ZGC: Contiguous memory reservation probing is broken for TB heap sizes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • gc
    • b15
    • Not verified

      The contiguous memory reservation code tries to reserve the entire heap view as one contiguous address range. If it fails, then we shift the start address and try again. However, if the view size is equal to ZAddressOffsetMax we end up trying to shift the start with 0, and GC will keep looping forever.

            Assignee:
            Stefan Karlsson
            Reporter:
            Stefan Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: