8252513: ZGC: Contiguous memory reservation probing is broken for TB heap sizes

Reviewed-by: eosterlund, pliden